# quicktest

./: .gitignore  Dockerfile  README.md  pyproject.toml
quicktest/: crew.py  main.py
quicktest/config/: agents.yaml  tasks.yaml
quicktest/tools/: beatifulsoup_tool.py  quaterly_report.py
