[tool.poetry]
name = "quicktest"
version = "0.1.0"
description = "quicktest using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.41.1" }
httpx = "^0.27.0"
socksio = "^1.0.0"
yfinance = "^0.2.41"
pandas = "^2.2.2"

[tool.poetry.scripts]
quicktest = "quicktest.main:run"
train = "quicktest.main:train"
replay = "quicktest.main:replay"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
